<resources>
    <string name="app_name">Sportivnyy</string>
    <string name="splash_screen_logo_info">SplashScreenLogo</string>
    <string name="menu_blank">Blank</string>
    <string name="nav_header_img_descr">Image Nav Header</string>
    <string name="title_activity_navigation_drawer">Navigation Drawer</string>
    <string name="title_activity_splash_screen">Splash Screen</string>
    <string name="menu_to_account">ToAccount</string>
    <string name="menu_to_shopping_cart">ToShoppingCart</string>
    <string name="title_shopping_cart">Productos en el carrito</string>
    <string name="image_producto">ImageProducto</string>
    <string name="nombre_producto">NombreProducto</string>
    <string name="descrpcion_producto">DescrpcionProducto</string>
    <string name="precio_producto">1000$</string>
    <string name="continuar_con_la_compra">Continuar con la compra</string>
    <string name="test_subtotal">Subtotal: %1$.2f $</string>
    <string name="subtotal_iva">Subtotal con IVA: %1$.2f $</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_facturacion_fragment">Facturación</string>
    <string name="subtitle_producto">Producto(s)</string>
    <string name="subtitle_precio">Precio</string>
    <string name="valor_iva">Valor IVA: %1$.2f $</string>
    <string name="descuento">Descuento: %1$.2f $ (%2$s)</string>
    <string name="subtotal_mas_iva">Total : Subtotal + IVA - Descuento: %1$.2f $</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="title_login_activity">Inicio de sesión</string>
    <string name="action_sign_in">Ingresar o Registrarse</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_email">Correo Electronico</string>
    <string name="account_header">Cuenta</string>
    <string name="sync_header">Sincronización</string>
    <string name="metodo_pago_title">Metodo de pago</string>
    <string name="notification_title">Envio de notificaciónes por defecto</string>
    <string name="sync_title">Sincronizar email registrado</string>
    <string name="attachment_title">Sincronización automatica</string>
    <string name="attachment_summary_on">Sincronizar correo sin acción manual
    </string>
    <string name="attachment_summary_off">Sincronizar correo manualmente (solo recordatorio)</string>
    <string name="settings">Configuración</string>
    <string name="menu_home">Inicio</string>
    <string name="title_detail_producto_activity">DetailProducto</string>
    <string name="test_text_very_large">"  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt, est vitae dictum venenatis, magna velit tincidunt mi, at fringilla elit nisi sit amet sem. Maecenas tellus tellus, semper nec ligula ac, ultricies tristique arcu. Quisque nisl leo, fermentum sed nulla non, fringilla semper odio. Ut interdum condimentum urna eu mattis. Suspendisse suscipit eu odio in tincidunt. Fusce ut diam nec quam porttitor faucibus scelerisque quis ante. Sed eget ante eget lectus vestibulum accumsan. Donec pellentesque tincidunt leo eu vestibulum. Aliquam finibus justo metus, vitae interdum tellus feugiat cursus. Quisque tincidunt, arcu in rhoncus eleifend, neque dui hendrerit ipsum, id pulvinar mauris risus pulvinar felis.  Donec vel venenatis nisl. Aliquam erat volutpat. Cras ut turpis pretium, mollis nisi ut, posuere dui. Nam accumsan, sapien vitae fringilla ultrices, mauris erat blandit quam, vitae iaculis dui quam et erat. Pellentesque lacinia molestie faucibus. In at nisi non enim consequat egestas. In dui sapien, ultricies sed orci et, facilisis commodo urna. Cras congue dui dictum, pretium enim id, condimentum enim.  Sed congue tellus mi, id consectetur elit facilisis suscipit. Maecenas rutrum, nibh a molestie tincidunt, enim ipsum semper diam, quis tincidunt orci orci a lectus. Aliquam orci nulla, mattis ac suscipit ut, hendrerit in libero. Donec ornare feugiat massa ut pretium. Vestibulum laoreet varius lorem. Nulla placerat tincidunt ex, vel condimentum massa consequat sed. Aliquam quis ultricies lorem, ut tristique libero.  Nullam at tortor id tortor consequat fermentum id eu nibh. Curabitur lectus mi, bibendum semper mauris non, tristique finibus nunc. Proin cursus ex eu luctus bibendum. Morbi a orci sed arcu scelerisque condimentum sed non urna. Ut aliquam sagittis mi. Pellentesque condimentum dictum libero ac ultrices. Nunc quis finibus nulla. Aenean ipsum mauris, efficitur in erat ut, consequat aliquam arcu. Nunc sodales dignissim vestibulum.  Curabitur at metus pretium, accumsan enim at, molestie nunc. Curabitur nec nunc mauris. Phasellus laoreet elit eu elit euismod placerat. Praesent massa urna, bibendum vel lorem a, venenatis interdum leo. Pellentesque a magna sem. In condimentum id urna sit amet tincidunt. Cras laoreet congue tincidunt.

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere tellus ipsum, in finibus tellus aliquet in. Nunc ante nisl, semper hendrerit felis nec, ornare imperdiet quam. Nam venenatis rhoncus odio, fermentum scelerisque nisl sodales sit amet. Donec ac porta metus. Maecenas augue urna, dictum at erat nec, dignissim viverra enim. Cras venenatis quis lacus mattis dignissim. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent molestie varius magna, ac tincidunt est tempus in.

Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin mattis fringilla sem, id aliquet metus molestie non. Suspendisse accumsan magna ipsum, laoreet fermentum metus ornare ac. Nam eget lobortis nibh. Donec mattis luctus lacus et vestibulum. Sed vel arcu laoreet, vulputate dolor vitae, egestas erat. Nulla aliquam interdum orci, sit amet aliquet augue varius eu. Vivamus eget bibendum dui.

Sed vel vestibulum ipsum. Duis a ligula vitae ligula facilisis tincidunt quis id augue. Maecenas feugiat est eget vehicula bibendum. Aenean et porta lorem, eu ornare massa. Quisque eu elementum enim. Etiam sed magna mattis, malesuada nibh ac, tempus dui. Phasellus ac fringilla orci, sed vestibulum augue. Nulla facilisi. In aliquet ipsum vel mi elementum dictum. Sed turpis urna, venenatis vel fermentum id, rhoncus at risus. Suspendisse a scelerisque lectus, quis molestie mauris. Praesent ut arcu in mauris iaculis convallis. Aenean sit amet aliquet ligula, id ultricies enim.

Suspendisse in blandit neque. Sed eu nisi sed arcu bibendum dignissim. Donec ultrices nisi varius, vehicula est vel, venenatis mi. Integer massa ligula, egestas sit amet nisl eu, cursus faucibus ipsum. Proin elementum nisi quis imperdiet vehicula. Suspendisse eget consectetur lacus. Etiam eget dictum erat. Suspendisse potenti.

Integer elementum ex dui, vitae semper massa accumsan eu. Sed dictum eros vitae sagittis vestibulum. Suspendisse cursus massa eget ullamcorper malesuada. Donec et commodo arcu. Proin finibus sodales tempus. Aliquam rutrum nibh sit amet risus sodales efficitur nec ut sem. Maecenas vehicula vitae ipsum ac finibus. Aenean non semper felis, eu imperdiet felis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam cursus nulla ligula. Nulla a aliquet felis. Cras eu diam porttitor, lobortis quam porta, faucibus dolor. Quisque luctus urna sit amet tincidunt venenatis. Morbi maximus felis non sapien ullamcorper, id dapibus sapien cursus.

Praesent bibendum, sapien id suscipit maximus, risus ligula convallis enim, quis placerat metus tortor at arcu. Etiam venenatis sapien nisl, et laoreet dui auctor ut. Sed porttitor placerat massa pellentesque finibus. Aliquam ut ultricies enim. Maecenas et vehicula augue, non imperdiet ante. Vivamus non ipsum id lacus semper mattis sed id nibh. Donec et libero in massa auctor blandit vel id enim. Nulla in blandit risus, sit amet hendrerit eros. Nunc suscipit sagittis massa, et hendrerit justo blandit in. Duis felis neque, luctus nec lobortis sed, feugiat sit amet diam. In tortor est, tempor nec tempus nec, fringilla ut nisl. Praesent rutrum, dui eu vehicula commodo, arcu erat ornare lorem, in mollis purus justo eget quam.

Vivamus hendrerit nisl nec neque condimentum, sed lobortis nunc viverra. Quisque mattis malesuada tempor. Pellentesque arcu tellus, rhoncus et lacinia nec, viverra ultrices eros. Aenean consequat nibh id posuere rutrum. Sed mattis tellus at ipsum molestie egestas. Sed dictum aliquet lorem, vitae consectetur felis faucibus eu. Ut eget pulvinar sem, sit amet pulvinar lacus. Etiam quis risus sapien. Nulla sollicitudin et purus sit amet ultricies. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec pulvinar erat eget odio congue iaculis. Praesent diam sapien, sollicitudin sed enim in, rhoncus viverra metus. Quisque posuere consectetur neque nec condimentum. Morbi eget lorem nunc. Quisque varius a tellus sed consequat.

Duis vehicula sit amet ipsum id viverra. Morbi orci eros, luctus at purus in, sodales eleifend lorem. Duis sit amet dapibus diam. Ut mattis purus vel tristique elementum. Proin non vehicula nisl. Sed quis porta tortor. Cras feugiat feugiat lorem eu sodales. Praesent nunc arcu, hendrerit finibus lacinia id, lobortis quis est. Suspendisse nec pretium eros. Integer iaculis posuere risus, quis sagittis tellus lacinia ac.

Pellentesque nec semper odio, eget rhoncus nunc. Sed malesuada elementum fermentum. Proin congue ante ac tincidunt molestie. Donec non nisi sit amet ante egestas rhoncus. Donec placerat mi et risus tristique aliquet. Vestibulum ultrices rhoncus condimentum. Cras tristique risus ut commodo hendrerit. Duis lorem ligula, varius a dolor eget, facilisis posuere lacus. Donec magna dui, aliquet at euismod ac, rhoncus sed ex.

Phasellus vel ultricies ex. Integer justo nulla, rhoncus at diam a, suscipit vestibulum odio. Donec sapien neque, condimentum id dui sit amet, cursus consectetur lorem. Proin egestas mollis nunc, quis luctus magna fermentum sit amet. Fusce ut pharetra elit. Suspendisse neque dui, fermentum a lorem a, pulvinar tristique erat. Aenean tincidunt nisi nec mattis mollis. Nulla bibendum ac nunc vel sollicitudin. Etiam vitae mi vitae nisi egestas tincidunt id at mauris. Maecenas ornare orci quis nisi scelerisque ultricies. Integer vel ante congue, facilisis ligula vel, blandit nisi. Praesent in nibh venenatis, volutpat ante at, vulputate purus. Cras consequat metus sodales risus luctus tempus. "</string>
    <string name="add_to_cart">Agregar al carrito</string>
    <string name="comment_author_name">Comentador</string>
    <string name="date_comentario">Fecha del comentario</string>
    <string name="text_commentario">Cometario</string>
    <string name="title_descripcion_producto">Descripción</string>
    <string name="test_text_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at diam odio. Nam est mauris, pharetra quis efficitur nec, pretium et metus. Suspendisse tristique posuere est et facilisis. Morbi lorem magna, ultricies elementum egestas eleifend, feugiat ut ex. Vestibulum sagittis placerat porttitor. Curabitur dictum sagittis lectus vel cursus. Curabitur ultricies tristique tempus. Nulla eget purus ut ligula laoreet luctus. Phasellus maximus mattis lobortis. Fusce at massa turpis. Nam gravida commodo urna, ut lacinia nunc tincidunt id. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at cursus enim. Nunc dapibus pretium leo in blandit. Sed tincidunt sed felis ac vestibulum. Ut finibus, mauris nec dignissim dapibus, diam sapien aliquet magna, et lobortis metus turpis ut nisi.</string>
    <string name="direct_buy">Comprar</string>
    <string name="title_comment">Comentarios</string>
    <string name="imagen_producto">Imagen del Producto</string>
    <string name="name_user">Nombre de Usuario</string>
    <string name="mail_user">Email</string>
    <string name="sign_out">Cerrar sesión</string>
</resources>