<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_producto_detail">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/detail_producto_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_producto"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginVertical="10dp"/>
        <ImageView
            android:id="@+id/detail_producto_Image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/image_producto"
            android:src="@drawable/ic_baseline_shopping_bag_48"
            android:layout_marginVertical="10dp"/>
        <TextView
            android:id="@+id/detail_producto_Precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/precio_producto"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginVertical="10dp"/>
        <TextView
            android:id="@+id/detail_producto_Descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_text_very_large"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:layout_marginVertical="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"/>

        <Button
            android:id="@+id/add_to_cart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:layout_marginHorizontal="100dp"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>