<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_centerHorizontal="true"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        android:layout_margin="15dp"
        android:gravity="center"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:background="@color/blue_cloud">
            <androidx.cardview.widget.CardView
                android:id="@+id/image_contanier_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.466"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="4dp">
            <ImageView
                android:id="@+id/ivProducto_In_Home"
                android:layout_width="@dimen/image_in_home_size"
                android:layout_height="@dimen/image_in_home_size"
                android:src="@drawable/logo"
                android:contentDescription="@string/imagen_producto"

                />
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/tvNombre_Producto_In_Home"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/nombre_producto"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.466"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_contanier_home"/>

            <TextView
                android:id="@+id/tvPrecio_Producto_In_Home"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/precio_producto"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>